Attempt to fix auto scroll problem on mobile when modals open.

--- a/css/jyutpingApp.css
+++ b/css/jyutpingApp.css
@@ -5,6 +5,10 @@ a:focus {
 	outline: none;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 /*
  *	@template	index.html
  */
